--- a/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Others/Index.cshtml
@@ -155,7 +155,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label class="">Estado</label>
+                                <label class="">Mandatorio</label>
                                 <input type="checkbox" class="form-check" value="true" name="Mandatario" id="Mandatario" >
                             </div>
                         </div>
