--- a/KLS_WEB/KLS_WEB/Views/Clients/Contacts/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Clients/Contacts/Index.cshtml
@@ -87,7 +87,7 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label class="">Correo</label>
-                                <input type="text" class="form-control" name="Correo" id="Correo" required />
+                                <input type="email" class="form-control" name="Correo" id="Correo" required />
                             </div>
                         </div>
                         <div class="col-md-6">
