--- a/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Shared/_Layout.cshtml
@@ -16,8 +16,7 @@
     <link rel="stylesheet" href="~/css/theme.css">
     <link rel="stylesheet" href="~/css/toastr.css">
     <link href="/css/dataTable.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     @RenderSection("Styles", required: false)
 </head>
 <body>
@@ -71,7 +70,7 @@
                             </li>
 
                             <li class="pt-2 pl-4">
-                                <a href="">
+                                <a href="/Offer">
                                     <div class="material-icons size-18 pr-1">article</div>
                                     <label>Oferta</label>
                                 </a>
@@ -179,11 +178,11 @@
 
         function updateContainer() {
             var $containerHeight = $(window).height();
-            console.log($containerHeight);
-            if ($containerHeight <= 872) {
+            //console.log($containerHeight);
+            if ($containerHeight <= 768) {
                 $(".left-bar").removeClass("expand");
             }
-            if ($containerHeight > 873) {
+            if ($containerHeight > 769) {
                 $(".left-bar").addClass("expand");
                 eventHide();
             }
